<resources>
    <string name="app_name">Orvea</string>
    <string name="email">Email</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="tel">Tel</string>
    <string name="valider">Valider</string>
    <string name="pr_nom">Prénom</string>
    <string name="nom">Nom</string>
    <string name="chlose">Chlose</string>
    <string name="open">Open</string>
    <string name="ajouter_membre">Ajouter Membre</string>
    <string name="title_activity_profils">ProfilsActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_listes_membres">ListesMembresActivity</string>
    <string name="title_activity_ajout_rapport">AjoutRapportActivity</string>
    <string name="orvea_family">Orvea Family</string>
    <string name="contact_orvea_fr">contact@orvea.fr</string>
    <string name="title_activity_cree_projet">CreeProjet</string>
    <string name="title_activity_liste_projet">ListeProjetActivity</string>
    <string name="title_activity_dossier_photo_projet">DossierPhotoProjet</string>
    <string name="title_activity_profil_users">ProfilUsersActivity</string>
    <string name="title_activity_droit_acces">DroitAccesActivity</string>
    <string name="title_activity_description_rapport">DescriptionRapportActivity</string>
    <string name="champs_obligatoir">Champ obligatoire</string>
    <string name="email_invalide">Adresse mail invalide</string>
</resources>
